[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/body_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/body_normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Timeout.gd" type="Script" id=3]
[ext_resource path="res://BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/gibberish_big_italic.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/about_regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/about_bold.tres" type="DynamicFont" id=7]

[node name="Timeout" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[node name="ScreenStretch" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="ScreenStretch"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
color = Color( 0, 0, 0, 1 )

[node name="v" type="VBoxContainer" parent="ScreenStretch/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="ScreenStretch/ColorRect/v"]
margin_top = 139.0
margin_right = 1280.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 1 )
text = "You are now seeing"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScreenStretch/ColorRect/v"]
margin_top = 187.0
margin_right = 1280.0
margin_bottom = 247.0
custom_fonts/font = ExtResource( 5 )
text = "The Big Black Screen of Shameâ„¢"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScreenStretch/ColorRect/v"]
margin_top = 251.0
margin_right = 1280.0
margin_bottom = 295.0
custom_fonts/font = ExtResource( 1 )
text = "for conspiring to cuss the host out."
align = 1
valign = 1

[node name="spacer1" type="Control" parent="ScreenStretch/ColorRect/v"]
margin_top = 299.0
margin_right = 1280.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 64 )

[node name="TimeoutLength" type="Label" parent="ScreenStretch/ColorRect/v"]
margin_top = 367.0
margin_right = 1280.0
margin_bottom = 411.0
custom_fonts/font = ExtResource( 2 )
text = "Your {} timeout will end"
align = 1
valign = 1

[node name="Label6" type="Label" parent="ScreenStretch/ColorRect/v"]
margin_top = 415.0
margin_right = 1280.0
margin_bottom = 459.0
custom_fonts/font = ExtResource( 2 )
text = "and your ability to play the game will return on"
align = 1
valign = 1

[node name="EndTime" type="Label" parent="ScreenStretch/ColorRect/v"]
margin_top = 463.0
margin_right = 1280.0
margin_bottom = 507.0
custom_fonts/font = ExtResource( 1 )
text = "1970 January 1 00:00:00 AM"
align = 1
valign = 1

[node name="spacer2" type="Control" parent="ScreenStretch/ColorRect/v"]
margin_top = 511.0
margin_right = 1280.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 36 )

[node name="h" type="HBoxContainer" parent="ScreenStretch/ColorRect/v"]
margin_top = 551.0
margin_right = 1280.0
margin_bottom = 580.0
custom_constants/separation = 0
alignment = 1

[node name="Label8" type="Label" parent="ScreenStretch/ColorRect/v/h"]
margin_left = 454.0
margin_right = 546.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 6 )
text = "(It is now "
align = 1
valign = 1

[node name="CurrentTime" type="Label" parent="ScreenStretch/ColorRect/v/h"]
margin_left = 546.0
margin_right = 813.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
text = "1970 January 1 00:00:00 AM"
align = 1
valign = 1

[node name="Label9" type="Label" parent="ScreenStretch/ColorRect/v/h"]
margin_left = 813.0
margin_right = 826.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 6 )
text = ".)"
align = 1
valign = 1

[node name="BackButton" parent="ScreenStretch" instance=ExtResource( 4 )]
rect_pivot_offset = Vector2( 390, 111 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="back_pressed" from="ScreenStretch/BackButton" to="." method="_on_back_pressed"]
